Add elements to html file

--- a/navbar.html
+++ b/navbar.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            CFH
+        </div>
+        <ul>
+            <li>Menu</li>
+            <li>Github</li>
+            <li>Google</li>
+            <li>Contact</li>
+        </ul>
+        <div class="search">
+            <input class="search-box" type="text">
+        </div>
+    </nav>
 </body>
 </html>
