--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
         <div class="logo">
             CFH
         </div>
@@ -20,6 +20,7 @@
         </ul>
         <div class="search">
             <input class="search-box" type="text">
+            <img class="search-icon" src="http://www.clker.com/cliparts/n/U/H/1/H/u/search-icon-white-one-hi.png">
         </div>
     </nav>
 </body>
