Adds user-nav and shopping cart elements to html file

--- a/navbar.html
+++ b/navbar.html
@@ -19,8 +19,13 @@
             <li>Contact</li>
         </ul>
         <div class="search">
-            <input class="search-box" type="text">
+            <input class="search-bar" type="text">
             <img class="search-icon" src="http://www.clker.com/cliparts/n/U/H/1/H/u/search-icon-white-one-hi.png">
+        </div>
+        <div class="user-nav">
+            <p>log in / directions</p>
+            <p>view cart</p>
+            <img class="shopping-cart" src="https://ak8.picdn.net/shutterstock/videos/1006608868/thumb/7.jpg">
         </div>
     </nav>
 </body>
