Add stylings to user-nav

--- a/navbar.html
+++ b/navbar.html
@@ -24,8 +24,7 @@
         </div>
         <div class="user-nav">
             <p>log in / directions</p>
-            <p>view cart</p>
-            <img class="shopping-cart" src="https://ak8.picdn.net/shutterstock/videos/1006608868/thumb/7.jpg">
+            <p>view cart <img class="shopping-cart" src="https://ak8.picdn.net/shutterstock/videos/1006608868/thumb/7.jpg"></p>
         </div>
     </nav>
 </body>
