--- a/navbar.html
+++ b/navbar.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day 11: HTML + External CSS Assignment</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="logo">
-            CFH
-        </div>
+      <div class="logo">CFH</div>
+      <div class="nav-links">
         <ul>
-            <li>Menu</li>
-            <li>Github</li>
-            <li>Google</li>
-            <li>Contact</li>
+          <li>Menu</li>
+          <li>Github</li>
+          <li>Google</li>
+          <li>Contact</li>
         </ul>
-        <div class="search">
-            <input class="search-bar" type="text">
-            <img class="search-icon" src="http://www.clker.com/cliparts/n/U/H/1/H/u/search-icon-white-one-hi.png">
-        </div>
-        <div class="user-nav">
-            <p>log in / directions</p>
-            <p>view cart <img class="shopping-cart" src="https://ak8.picdn.net/shutterstock/videos/1006608868/thumb/7.jpg"></p>
-        </div>
+      </div>
+      <div class="search">
+        <input class="search-bar" type="text" />
+        <img
+          class="search-icon"
+          src="http://www.clker.com/cliparts/n/U/H/1/H/u/search-icon-white-one-hi.png"
+        />
+      </div>
+      <div class="user-nav">
+        <p>log in / directions</p>
+        <p>
+          view cart
+          <img
+            class="shopping-cart"
+            src="https://ak8.picdn.net/shutterstock/videos/1006608868/thumb/7.jpg"
+          />
+        </p>
+      </div>
     </nav>
-</body>
+  </body>
 </html>
