Added link and link styling

--- a/navbar.html
+++ b/navbar.html
@@ -13,8 +13,9 @@
       <div class="nav-links">
         <ul>
           <li>Menu</li>
-          <li>Github</li>
-          <li>Google</li>
+          <li><a href="https://github.com/">Github</a></li>
+          <li><a href="https://www.google.com/">Google</a></li>
+          <!--I know we didn't have to make them link to anything, but I did anyway for the heck of it, but removed all styling on the link/visited pseudo for **PRACTICE**-->
           <li>Contact</li>
         </ul>
       </div>
