Change unnecessary div element to p

--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">CFH</div>
+      <p class="logo">CFH</p>
       <div class="nav-links">
         <ul>
           <li>Menu</li>
