Placed logo inside h1 element inside div

--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <nav class="navbar">
-      <p class="logo">CFH</p>
+      <div class="logo">
+        <h1>
+          CFH
+        </h1>
+      </div>
       <div class="nav-links">
         <ul>
           <li>Menu</li>
